[gd_scene load_steps=6 format=3 uid="uid://b01hwi1wl35q5"]

[ext_resource type="Script" uid="uid://cllmdrohjk152" path="res://scripts/shop_buying.gd" id="1_xhrnm"]
[ext_resource type="Texture2D" uid="uid://deg5sjv6v35i0" path="res://assets/sprites/shopBackground.png" id="2_8n8qt"]
[ext_resource type="Texture2D" uid="uid://1b4i1vljuvq6" path="res://assets/sprites/exitButton.png" id="3_rlgcx"]
[ext_resource type="PackedScene" uid="uid://be3cs46toooov" path="res://scenes/money.tscn" id="5_knwvf"]
[ext_resource type="PackedScene" uid="uid://0nykyhbujc75" path="res://scenes/shop_row_buying.tscn" id="6_8n8qt"]

[node name="ShopBuying" type="Node2D"]
script = ExtResource("1_xhrnm")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575, 323.5)
scale = Vector2(11.5, 6.47)
texture = ExtResource("2_8n8qt")

[node name="ExitButton" type="Button" parent="."]
offset_left = 1041.0
offset_top = 42.0
offset_right = 1086.0
offset_bottom = 87.0
icon = ExtResource("3_rlgcx")
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Money" parent="." instance=ExtResource("5_knwvf")]
position = Vector2(67, 39)

[node name="ProductLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="ShopRowBuyingOrange" parent="." instance=ExtResource("6_8n8qt")]
position = Vector2(107, 184)
imageName = "orange"

[node name="ShopRowBuyingPear" parent="." instance=ExtResource("6_8n8qt")]
position = Vector2(108, 277)
imageName = "pear"

[node name="ShopRowBuyingWatermelon" parent="." instance=ExtResource("6_8n8qt")]
position = Vector2(110, 358)
imageName = "watermelon"

[node name="FruitsButton" type="Button" parent="."]
offset_left = 95.0
offset_top = 81.0
offset_right = 196.0
offset_bottom = 112.0
text = "Fruits"

[node name="UpgradesButton" type="Button" parent="."]
offset_left = 289.0
offset_top = 81.0
offset_right = 390.0
offset_bottom = 112.0
text = "Upgrades"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="UpgradesButton" to="." method="_on_upgrades_button_pressed"]
